Bug 545462: configure preview features according to he --enable-preview flag
The change is backward compatible with Eclipse 4.11 without Java 12
support.

Change-Id: Ib49f5f258a94b38d0d4c21bb6b290ae92facd057
Signed-off-by: Fred Bricon <fbricon@gmail.com>